--- a/todoList/src/main/resources/application.properties
+++ b/todoList/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
 
 logging.level.edu.kh.todo=debug
+
+# URL에 jsessionid가 보여질때 설정
+server.servlet.session.tracking-modes=cookie
+
+# jsessionid란
+# 서버가 클라이언트를 식별하기 위해 생성한 세션 ID
+# 보통 session 객체가 생성될 때 자동으로 만들어짐
+# 기본적으로 쿠키를 통해 클라이언트 정보를 저장함
